--- a/static/modificaPassword.html
+++ b/static/modificaPassword.html
@@ -26,6 +26,7 @@
                 </div>
             </header>
         </div>
+        <p class="text-center fw-bold mx-3 mb-0">MODIFICA PASSWORD</p>
         <form onsubmit="modificaPassword(); return false">
             <div class="form-group">
               <label for="exampleInputEmail1">Vecchia password</label>
