--- a/static/login.html
+++ b/static/login.html
@@ -32,7 +32,7 @@
                     <div class="text-center text-lg-start mt-4 pt-2">
                         <a href="/">Indietro</a>
                       <button type="submit" class="btn btn-primary btn-lg"
-                        style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                        style="padding-left: 2.5rem; padding-right: 2.5rem;">Accedi</button>
                       <p class="small fw-bold mt-2 pt-1 mb-0">Non ha ancora un account? <a href="registrazione.html"
                           class="link-danger">Registrati</a></p>
                     </div>
