--- a/static/utente.html
+++ b/static/utente.html
@@ -38,7 +38,7 @@
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-2000">
                 <div class="col-md-8 col-lg-6 col-xl-3 offset-xl-1 bg-white" >
-                    <a class="link-info" href="storicoImpianti.html">Visualizza il tuo storico impianti</a>
+                    <p class="text-center fw-bold mx-3 mb-0"><a class="link-info" href="storicoImpianti.html">Visualizza il tuo storico impianti</a></p>
                 </div>
             </div>
         </div>
